# django-g

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
django_g/: __init__.py  local.py  middleware.py  tests.py
