[metadata]
name = django-g
version = 0.0.1
url = https://github.com/buserbrasil/django-g
license = MIT
author = Iuri de Silvio
author_email = iurisilvio@gmail.com
description = Django global context
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[flake8]
max-line-length = 88

[tool:pytest]
addopts = --black --flake8 --cov=django_g --cov-report html --cov-report term
python_files = tests.py test_*.py *_tests.py

[aliases]
test=pytest
